# omniplan-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml  server.json
.github/workflows/: publish.yml
src/omniplan_mcp/: __init__.py  __main__.py  cli.py  lock.py  parser.py  server.py
tests/: test_cli.py  test_parser.py
