[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omniplan-mcp"
version = "0.5.0"
description = "MCP server and CLI for reading and writing OmniPlan (.oplx) and Microsoft Project (.mpp) schedule files"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Cygnus Yang" }
]
keywords = ["mcp", "omniplan", "project-management", "microsoft-project", "schedule", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "click>=8.0.0",
]

[project.scripts]
omniplan-mcp = "omniplan_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/cygnusyang/omniplan-mcp"
Repository = "https://github.com/cygnusyang/omniplan-mcp"
"Bug Tracker" = "https://github.com/cygnusyang/omniplan-mcp/issues"
